# basic-grpc

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: c-cpp.yml
include/client/: client.h
include/server/: server.h
proto/: example.proto
src/: client.cpp  server.cpp
src/app/: client.cpp  server.cpp
src/lib/: client.cpp  server.cpp
tests/: test_server.cpp
